--- a/cutting/templates/cutting/order_list.html
+++ b/cutting/templates/cutting/order_list.html
@@ -376,20 +376,44 @@
                                 </a>
                             </li>
                         {% endif %}
-                        {% for num in page_obj.paginator.page_range %}
-                            {% if page_obj.number == num %}
-                                <li class="page-item active">
-                                    <span class="page-link">{{ num }}</span>
-                                </li>
-                            {% else %}
-                                <li class="page-item">
-                                    <a class="page-link"
-                                       href="?page={{ num }}{% if search_query %}&search={{ search_query }}{% endif %}{% if current_status %}&status={{ current_status }}{% endif %}{% if current_warehouse %}&warehouse={{ current_warehouse }}{% endif %}">
-                                        {{ num }}
-                                    </a>
+                        {% if page_obj.number > 4 %}
+                            <li class="page-item">
+                                <a class="page-link"
+                                   href="?page=1{% if search_query %}&search={{ search_query }}{% endif %}{% if current_status %}&status={{ current_status }}{% endif %}{% if current_warehouse %}&warehouse={{ current_warehouse }}{% endif %}">1</a>
+                            </li>
+                            {% if page_obj.number > 5 %}
+                                <li class="page-item disabled">
+                                    <span class="page-link">...</span>
                                 </li>
                             {% endif %}
+                        {% endif %}
+                        {% for num in page_obj.paginator.page_range %}
+                            {% if num >= page_obj.number|add:"-3" and num <= page_obj.number|add:"3" %}
+                                {% if page_obj.number == num %}
+                                    <li class="page-item active">
+                                        <span class="page-link">{{ num }}</span>
+                                    </li>
+                                {% else %}
+                                    <li class="page-item">
+                                        <a class="page-link"
+                                           href="?page={{ num }}{% if search_query %}&search={{ search_query }}{% endif %}{% if current_status %}&status={{ current_status }}{% endif %}{% if current_warehouse %}&warehouse={{ current_warehouse }}{% endif %}">
+                                            {{ num }}
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            {% endif %}
                         {% endfor %}
+                        {% if page_obj.number < page_obj.paginator.num_pages|add:"-3" %}
+                            {% if page_obj.number < page_obj.paginator.num_pages|add:"-4" %}
+                                <li class="page-item disabled">
+                                    <span class="page-link">...</span>
+                                </li>
+                            {% endif %}
+                            <li class="page-item">
+                                <a class="page-link"
+                                   href="?page={{ page_obj.paginator.num_pages }}{% if search_query %}&search={{ search_query }}{% endif %}{% if current_status %}&status={{ current_status }}{% endif %}{% if current_warehouse %}&warehouse={{ current_warehouse }}{% endif %}">{{ page_obj.paginator.num_pages }}</a>
+                            </li>
+                        {% endif %}
                         {% if page_obj.has_next %}
                             <li class="page-item">
                                 <a class="page-link"
